--- a/index.htm
+++ b/index.htm
@@ -18,8 +18,8 @@
 	<meta http-equiv='Pragma' content='no-cache' />
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<meta name="author" content="DSX,工科男表白,浪漫表白,表白网站">
-	<meta name="description" content="这是XXX为XXX表白制作的表白网站">
+	<meta name="author" content="DSX,普信男表白,浪漫表白,表白网站">
+	<meta name="description" content="这是普信男王某博为XXX表白制作的表白网站">
 	<title>XXX LOVE XXX</title>
 	<link rel="stylesheet" href="all.min.css" >
 </head>
@@ -28,11 +28,11 @@
 		<div class="ft-section section-1" data-id="section-1">
 			<div id="/section-1/page-1" class="ft-page page-1" data-id="page-1">
 				<p class="text1"><span id="text-75" contenteditable="true">XX</span> ❤ <span id="text-76" contenteditable="true">XX</span> <span id="text-77" contenteditable="true">一生一世</span></p>
-				<p class="text2">按键盘 "↓" <span id="text-78" contenteditable="true">开始倾听普信男的浪漫表白</span></p>
+				<p class="text2">按键盘 "↓" <span id="text-78" contenteditable="true">开始倾听普信男王某博的浪漫表白</span></p>
 			</div>
 			<div id="/section-1/page-2" class="ft-page page-2" data-id="page-2">
-				<p class="top-text" id="text-1" contenteditable="true">过去的XX一直是一个人生活，享受着孤独，也憧憬着爱情。</p>
-				<img src="img/iali63.jpg" tppabs="img/iali63.jpg"  alt="过去的XX一直是一个人生活，享受着孤独，也憧憬着爱情。" />
+				<p class="top-text" id="text-1" contenteditable="true">过去的王博一直是一个人生活，享受着孤独，也憧憬着爱情。</p>
+				<img src="img/iali63.jpg" tppabs="img/iali63.jpg"  alt="过去的王某一直是一个人生活，享受着孤独，也憧憬着爱情。" />
 			</div>
 			<div id="/section-1/page-3" class="ft-page page-3 left-img" data-id="page-3">
 				<h2 class="text" id="text-2" contenteditable="true">一个人的长廊</h2>
@@ -79,8 +79,8 @@
 				<img src="img/iali25.jpg" tppabs="img/iali25.jpg" />
 			</div>
 			<div id="/section-3/page-3" class="ft-page page-13" data-id="page-3">
-				<img src="img/iali64.jpg" tppabs="img/iali64.jpg" alt='可是小明的爱情又在哪里呢？' />
-				<h3 id="text-13" contenteditable="true">可是XX的爱情又在哪里呢？</h3>
+				<img src="img/iali64.jpg" tppabs="img/iali64.jpg" alt='可是王某的爱情又在哪里呢？' />
+				<h3 id="text-13" contenteditable="true">可是王某的爱情又在哪里呢？</h3>
 			</div>
 			<div id="/section-3/page-4" class="ft-page page-14 left-img" data-id="page-4">
 				<h3 id="text-14" contenteditable="true">在镜子里面吗？他不敢相信</h3>
@@ -91,34 +91,34 @@
 				<img src="img/iali45.jpg" tppabs="img/iali45.jpg" />
 			</div>
 			<div id="/section-3/page-6" class="ft-page page-16 left-img" data-id="page-6">
-				<h3><span id="text-17" contenteditable="true">于是，XX一个人继续向前走</span><br /><span id="text-18" contenteditable="true">走在茫茫的雪地上</span></h3>
+				<h3><span id="text-17" contenteditable="true">于是，王某一个人继续向前走</span><br /><span id="text-18" contenteditable="true">走在茫茫的雪地上</span></h3>
 				<img src="img/iali66.jpg" tppabs="img/iali66.jpg" />
 			</div>
 			<div id="/section-3/page-7" class="ft-page page-17 top-text" data-id="page-7">
-				<h3 id="text-19" contenteditable="true">直到有一天XX与XX相遇了</h3>
+				<h3 id="text-19" contenteditable="true">直到有一天王某博与王某相遇了</h3>
 				<img src="img/iali16.jpg" tppabs="img/iali16.jpg" />
 			</div>
 		</div>
 		<div class="ft-section section-4" data-id="section-4">
 			<div id="/section-4/page-1" class="ft-page page-18 full-img" data-id="page-1">
-				<p class="text" id="text-20" contenteditable="true">XX喜欢XX，非常非常的喜欢，因为XX的出现，XX脸上有了更加灿烂的笑容</p>
+				<p class="text" id="text-20" contenteditable="true">王某博喜欢王某，非常非常的喜欢，因为XX的出现，XX脸上有了更加灿烂的笑容</p>
 				<img src="img/iali11.jpg" tppabs="img/iali11.jpg"  />
 			</div>
 			<div id="/section-4/page-2" class="ft-page page-19" data-id="page-2">
-				<h3 id="text-21" contenteditable="true">可是XX会喜欢XX吗？</h3>
+				<h3 id="text-21" contenteditable="true">可是王某会喜欢王某博吗？</h3>
 				<img src="img/iali75.jpg" tppabs="img/iali75.jpg" />
 			</div>
 			<div id="/section-4/page-3" class="ft-page page-20" data-id="page-3">
 				<img src="img/iali59.png" tppabs="img/iali59.png" />
-				<h3 id="text-22" contenteditable="true">XX想。。。</h3>
+				<h3 id="text-22" contenteditable="true">王某博想。。。</h3>
 				<img src="img/iali9.jpg" tppabs="img/iali9.jpg" />
 			</div>
 			<div id="/section-4/page-4" class="ft-page page-21" data-id="page-4">
-				<h3 id="text-23" contenteditable="true">XX想和XX在一起</h3>
+				<h3 id="text-23" contenteditable="true">王某博想和王某在一起</h3>
 				<img src="img/iali59.png" tppabs="img/iali59.png" />
 			</div>
 			<div id="/section-4/page-5" class="ft-page page-22 left-img" data-id="page-5">
-				<h3 id="text-24" contenteditable="true">然后XX会经常去找XX</h3>
+				<h3 id="text-24" contenteditable="true">然后王某博会经常去找王某</h3>
 				<img src="img/iali4.jpg" tppabs="img/iali4.jpg" />
 			</div>
 			<div id="/section-4/page-6" class="ft-page page-23 left-img" data-id="page-6">
@@ -126,7 +126,7 @@
 				<img src="img/iali44.jpg" tppabs="img/iali44.jpg" />
 			</div>
 			<div id="/section-4/page-7" class="ft-page page-24 full-img" data-id="page-7">	
-				<h3 id="text-26" contenteditable="true">晚上XX会把XX送回家</h3>
+				<h3 id="text-26" contenteditable="true">晚上王某博会把王某送回家</h3>
 				<img src="img/iali32.jpg" tppabs="img/iali32.jpg" />
 			</div>
 		</div>
@@ -136,7 +136,7 @@
 				<img src="img/iali37.jpg" tppabs="img/iali37.jpg" />
 			</div>
 			<div id="/section-5/page-2" class="ft-page page-26 top-text" data-id="page-2">
-				<h3 id="text-29" contenteditable="true">然后高兴地进入梦乡，在梦中还会和XX在一起</h3>
+				<h3 id="text-29" contenteditable="true">然后高兴地进入梦乡，在梦中还会和王某在一起</h3>
 				<img src="img/iali10.gif" tppabs="img/iali10.gif" />
 			</div>
 			<div id="/section-5/page-3" class="ft-page page-27" data-id="page-3">
@@ -144,11 +144,11 @@
 				<img src="img/iali67.jpg" tppabs="img/iali67.jpg"  />
 			</div>
 			<div id="/section-5/page-4" class="ft-page page-28" data-id="page-4">
-				<h3 id="text-31" contenteditable="true">然后，XX和XX一起去很多地方玩</h3>
+				<h3 id="text-31" contenteditable="true">然后，王某博和王某一起去很多地方玩</h3>
 				<img src="img/iali40.jpg" tppabs="img/iali40.jpg" />
 			</div>
 			<div id="/section-5/page-5" class="ft-page page-29" data-id="page-5">
-				<h3 id="text-32" contenteditable="true">XX也想和XX一块成为一对吃货</h3>
+				<h3 id="text-32" contenteditable="true">王某也想和王某博一块成为一对吃货</h3>
 				<img src="img/iali12.jpg" tppabs="img/iali12.jpg" />
 			</div>
 			<div id="/section-5/page-6" class="ft-page page-30" data-id="page-6">
@@ -156,7 +156,7 @@
 				<img src="img/iali76.gif" tppabs="img/iali76.gif" />
 			</div>
 			<div id="/section-5/page-7" class="ft-page page-31" data-id="page-7">
-				<h3 id="text-34" contenteditable="true">再然后，XX会开始学习她的技能</h3>
+				<h3 id="text-34" contenteditable="true">再然后，王某博会开始学习她的技能</h3>
 				<img src="img/iali77.jpg" tppabs="img/iali77.jpg" />
 			</div>
 		</div>
@@ -181,30 +181,30 @@
 				<img src="img/iali31.jpg" tppabs="img/iali31.jpg" />
 			</div>
 			<div id="/section-6/page-6" class="ft-page page-37 left-img" data-id="page-6">
-				<h3 id="text-42" contenteditable="true">XX不想这样</h3>
+				<h3 id="text-42" contenteditable="true">王某博不想这样</h3>
 				<img src="img/iali49.jpg" tppabs="img/iali49.jpg" />
 			</div>
 			<div id="/section-6/page-7" class="ft-page page-38 bottom-text" data-id="page-7">
 				<img src="img/iali21.jpg" tppabs="img/iali21.jpg" />
-				<h3 id="text-43" contenteditable="true">一定是我有什么做的不对，XX会这么想</h3>
+				<h3 id="text-43" contenteditable="true">一定是我有什么做的不对，王某博会这么想</h3>
 			</div>
 		</div>
 		<div class="ft-section section-7" data-id="section-7">
 			<div id="/section-7/page-1" class="ft-page page-39 left-img" data-id="page-1">
-				<h3 id="text-44" contenteditable="true">如果没有XX在身边，窗外就没有风景</h3>
+				<h3 id="text-44" contenteditable="true">如果没有王某在身边，窗外就没有风景</h3>
 				<img src="img/iali2.jpg" tppabs="img/iali2.jpg" />
 			</div>
 			<div id="/section-7/page-2" class="ft-page page-40" data-id="page-2">
-				<h3 id="text-45" contenteditable="true">如果没有XX在身后</h3>
+				<h3 id="text-45" contenteditable="true">如果没有王某在身后</h3>
 				<img src="img/iali14.jpg" tppabs="img/iali14.jpg"  />
 			</div>
 			<div id="/section-7/page-3" class="ft-page page-41" data-id="page-3">
 				<img src="img/iali30_1.jpg" tppabs="img/iali30_1.jpg" class='img1'/>
 				<img src="img/iali30_2.jpg" tppabs="img/iali30_2.jpg" class='img2'/>
-				<h3 id="text-46" contenteditable="true"> XX又怎会飞的更高更远</h3>
+				<h3 id="text-46" contenteditable="true"> 王某博又怎会飞的更高更远</h3>
 			</div>
 			<div id="/section-7/page-4" class="ft-page page-42" data-id="page-4">
-				<h3><span id="text-47" contenteditable="true">XX不想这样。他要为XX改变自己</span><br /><span id="text-48" contenteditable="true">XX不知道XX喜欢什么，但他一定会满足她的一切。</span></h3>
+				<h3><span id="text-47" contenteditable="true">王某博不想这样。王某博要改变自己</span><br /><span id="text-48" contenteditable="true">XX不知道XX喜欢什么，但他一定会满足她的一切。</span></h3>
 				<img src="img/iali69.jpg" tppabs="img/iali69.jpg"  />
 			</div>
 			<div id="/section-7/page-5" class="ft-page page-43" data-id="page-5">
@@ -216,7 +216,7 @@
 				<img src="img/iali0.jpg" tppabs="img/iali0.jpg" />
 			</div>
 			<div id="/section-7/page-7" class="ft-page page-45 left-img" data-id="page-7">
-				<h3><span id="text-52" contenteditable="true">直到一天，XX不想让自己后悔</span><br /><span id="text-53" contenteditable="true">XX开始准备一份惊喜</span></h3>
+				<h3><span id="text-52" contenteditable="true">直到一天，王某博不想让自己后悔</span><br /><span id="text-53" contenteditable="true">XX开始准备一份惊喜</span></h3>
 				<img src="img/iali18.jpg" tppabs="img/iali18.jpg" />
 			</div>
 		</div>
@@ -225,7 +225,7 @@
 				<img src="img/iali57.gif" tppabs="img/iali57.gif" />
 				<h3>
 					<span id="text-54" contenteditable="true">看着惊喜一点点准备好了</span>
-					<span id="text-55" contenteditable="true">XX好开心</span>
+					<span id="text-55" contenteditable="true">王某好开心</span>
 					<span id="text-56" contenteditable="true">因为他想象着XX看到时</span>
 					<span id="text-57" contenteditable="true">开心的样子</span>
 				</h3>
